Update back from testing

--- a/student-booking.html
+++ b/student-booking.html
@@ -119,7 +119,7 @@
                 <!-- Nicholas Correa -->
                 <div class="tutor-card" data-subject="mathematics,biology,coScience,exScience" data-grade="A*" data-availability="weekdays">
                     <div class="tutor-avatar">N</div>
-                    <h3>Nicolas Van Gogh</h3>
+                    <h3>Nicolas Correa</h3>
                     <p class="tutor-subject">Mathematics, IGCSE Biology</p>
                     <div class="tutor-info">
                         <p><strong>Grade Achieved: </strong>A*</p>
