--- a/student-booking.html
+++ b/student-booking.html
@@ -156,7 +156,17 @@
                 </div>
 
                 <!-- Tutor 4 -->
-                
+                <div class="tutor-card" data-subject="" data-grade="" data-availability="">
+                    <div class="tutor-avatar">R</div>
+                    <h3>Rafael Bast</h3>
+                    <p class="tutor-subject"></p>
+                    <div class="tutor-info">
+                        <p><strong>Grade Achieved: </strong></p>
+                        <p><strong>Availability: </strong></p>
+                        <p><strong>About Me: </strong>I am a tutor!</p>
+                    </div>
+                    <button class="btn btn-primary btn-full">Book Session</button>
+                </div>
             </div>
         </div>
     </section>
