Update Hugo profile

--- a/student-booking.html
+++ b/student-booking.html
@@ -122,7 +122,7 @@
                     <h3>Nicolas Correa</h3>
                     <p class="tutor-subject">Mathematics, IGCSE Biology</p>
                     <div class="tutor-info">
-                        <p><strong>Grade Achieved: </strong>A*</p>
+                        <p><strong>Grade(s) Achieved: </strong>A*</p>
                         <p><strong>Availability: </strong>Weekdays</p>
                         <p><strong>About Me: </strong>I am a tutor!</p>
                     </div>
@@ -135,7 +135,7 @@
                     <h3>Ranvir Verma</h3>
                     <p class="tutor-subject">Chemistry, IGCSE Extended Maths</p>
                     <div class="tutor-info">
-                        <p><strong>Grade Achieved: </strong>A</p>
+                        <p><strong>Grade(s) Achieved: </strong>A</p>
                         <p><strong>Availability: </strong>Weekends</p>
                         <p><strong>About Me: </strong>I am a tutor!</p>
                     </div>
@@ -148,9 +148,9 @@
                     <h3>Hugo Lanau</h3>
                     <p class="tutor-subject">Physics, IGCSE Additional Maths, IGCSE English and Spanish</p>
                     <div class="tutor-info">
-                        <p><strong>Grade Achieved: </strong>A*</p>
-                        <p><strong>Availability: </strong>Flexible</p>
-                        <p><strong>About Me: </strong>I am a tutor!</p>
+                        <p><strong>Grade(s) Achieved: </strong>A*</p>
+                        <p><strong>Availability: </strong>Weekdays</p>
+                        <p><strong>About Me: </strong>Hi, my name is Hugo and I am currently in Y13!</p>
                     </div>
                     <button class="btn btn-primary btn-full">Book Session</button>
                 </div>
@@ -161,7 +161,7 @@
                     <h3>Rafael Bast</h3>
                     <p class="tutor-subject"></p>
                     <div class="tutor-info">
-                        <p><strong>Grade Achieved: </strong></p>
+                        <p><strong>Grade(s) Achieved: </strong></p>
                         <p><strong>Availability: </strong></p>
                         <p><strong>About Me: </strong>I am a tutor!</p>
                     </div>
