--- a/tutor-signup.html
+++ b/tutor-signup.html
@@ -84,7 +84,7 @@
                         <h3 style="margin-bottom: 1rem; color: #171717; border-bottom: 2px solid hsl(217, 91%, 60%); padding-bottom: 0.5rem;">Teaching Information</h3>
                         
                         <div class="form-group">
-                            <label for="subjects">Subjects You Can Teach* <i>(max. 3)</i></label>
+                            <label for="subjects">Subjects You Can Teach* <i>(max. 3)</i><br><br><em>Primary, Y7-9 subjects</em></label>
                             <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 0.5rem; margin-top: 0.5rem;">
                                 <div class="checkbox-group">
                                     <input type="checkbox" id="math" name="subjects" value="Mathematics">
@@ -142,7 +142,7 @@
                                 </div>
                                 <div class="checkbox-group">
                                     <input type="checkbox" id="addMath" name="igcsesubjects" value="addMath">
-                                    <label for="addMath">Additional Mathematics</label>
+                                    <label for="addMath">Further Pure Mathematics</label>
                                 </div>
                                 <div class="checkbox-group">
                                     <input type="checkbox" id="coScience" name="igcsesubjects" value="coScience">
