Rafael Salomon profile

--- a/student-booking.html
+++ b/student-booking.html
@@ -156,14 +156,14 @@
                 </div>
 
                 <!-- Tutor 4 -->
-                <div class="tutor-card" data-subject="" data-grade="" data-availability="">
+                <div class="tutor-card" data-subject="physics,mathematics,coreMath,extMath" data-grade="A" data-availability="weekends">
                     <div class="tutor-avatar">R</div>
-                    <h3>Rafael Bast</h3>
-                    <p class="tutor-subject"></p>
+                    <h3>Rafael Salomon</h3>
+                    <p class="tutor-subject">Physics, IGCSE Extended Maths</p>
                     <div class="tutor-info">
-                        <p><strong>Grade(s) Achieved: </strong></p>
-                        <p><strong>Availability: </strong></p>
-                        <p><strong>About Me: </strong>I am a tutor!</p>
+                        <p><strong>Grade(s) Achieved: A</strong></p>
+                        <p><strong>Availability: Weekends</strong></p>
+                        <p><strong>About Me: </strong>Hello! I'm Rafael Salomon and I like physics!</p>
                     </div>
                     <button class="btn btn-primary btn-full">Book Session</button>
                 </div>
