Added Samuel Szejnfeld

--- a/student-booking.html
+++ b/student-booking.html
@@ -120,7 +120,7 @@
                 <div class="tutor-card" data-subject="mathematics,biology,coScience,exScience" data-grade="A*" data-availability="weekdays">
                     <div class="tutor-avatar">N</div>
                     <h3>Nicolas Correa</h3>
-                    <p class="tutor-subject">Mathematics, IGCSE Biology</p>
+                    <p class="tutor-subject">Mathematics<br>IGCSE Biology</p>
                     <div class="tutor-info">
                         <p><strong>Grade(s) Achieved: </strong>A*</p>
                         <p><strong>Availability: </strong>Weekdays</p>
@@ -133,7 +133,7 @@
                 <div class="tutor-card" data-subject="chemistry,coreMath,extMath,mathematics" data-grade="A" data-availability="weekends">
                     <div class="tutor-avatar">R</div>
                     <h3>Ranvir Verma</h3>
-                    <p class="tutor-subject">Chemistry, IGCSE Extended Maths</p>
+                    <p class="tutor-subject">Chemistry<br>IGCSE Extended Maths</p>
                     <div class="tutor-info">
                         <p><strong>Grade(s) Achieved: </strong>A</p>
                         <p><strong>Availability: </strong>Weekends</p>
@@ -146,7 +146,7 @@
                 <div class="tutor-card" data-subject="physics,mathematics,english,igcseEngfl,igcseSpafl,spanish,coreMath,extMath,addMath,coScience,exScience," data-grade="A*" data-availability="flexible">
                     <div class="tutor-avatar">H</div>
                     <h3>Hugo Lanau</h3>
-                    <p class="tutor-subject">Physics, IGCSE Additional Maths, IGCSE English and Spanish</p>
+                    <p class="tutor-subject">Physics<br>IGCSE Additional Maths<br>IGCSE English and Spanish</p>
                     <div class="tutor-info">
                         <p><strong>Grade(s) Achieved: </strong>A*</p>
                         <p><strong>Availability: </strong>Weekdays</p>
@@ -155,17 +155,30 @@
                     <button class="btn btn-primary btn-full">Book Session</button>
                 </div>
 
-                <!-- Tutor 4 -->
+                <!-- Rafa Salomon -->
                 <div class="tutor-card" data-subject="physics,mathematics,coreMath,extMath" data-grade="A" data-availability="weekends">
                     <div class="tutor-avatar">R</div>
                     <h3>Rafael Salomon</h3>
-                    <p class="tutor-subject">Physics, IGCSE Extended Maths</p>
+                    <p class="tutor-subject">Physics<br>IGCSE Extended Maths</p>
                     <div class="tutor-info">
-                        <p><strong>Grade(s) Achieved: A</strong></p>
-                        <p><strong>Availability: Weekends</strong></p>
+                        <p><strong>Grade(s) Achieved: </strong>A</p>
+                        <p><strong>Availability: </strong>Weekends</p>
                         <p><strong>About Me: </strong>Hello! I'm Rafael Salomon and I like physics!</p>
                     </div>
                     <button class="btn btn-primary btn-full">Book Session</button>
+                </div>
+
+                <!-- Samuel Szejnfeld -->
+                <div class="tutor-card" data-subject="biology,coScience,exScience" data-grade="A*" data-availability="flexible">
+                    <div class="tutor-avatar">S</div>
+                    <h3>Samuel Szejnfeld</h3>
+                    <p class="tutor-subject">Biology<br>IGCSE Extended Co-ordinated Sciences</p>
+                    <div class="tutor-info">
+                        <p><strong>Grade(s) Achieved: </strong><br>IGCSE Co-ordinated Sciences: A*<br>IB Predicted 7/7 Biology and Chemistry</p>
+                        <p><strong>Availability: </strong>Flexible</p>
+                        <p><strong>About Me: </strong>Hi, my name is Samuel and I am very fond of the sciences, especially biology. Throughout my years in school, I have accumulated many tips and tricks to help with learning and exam results.</p>
+                    </div>
+                    <button onclick="window.open('https://calendar.app.google/3Hx58xHHYtscQ2TGA', '_blank')" class="btn btn-primary btn-full">Book Session</button>
                 </div>
             </div>
         </div>
